<resources>
    <string name="app_name">Video Maker Of Photos With Song</string>
    <string name="feather_promo_title2">a</string>
    <string name="create_new">Create video</string>
    <string name="my_video">My video</string>
    <string name="pick_album">Pick album</string>
    <string name="next">Next</string>
    <string name="swap_and_edit">Swap and Edit</string>
    <string name="clear">Clear</string>
    <string name="selected_0_image_s">Selected 0 image(s)</string>
    <string name="pro">Processing...</string>
    <string name="save_video">Save Video</string>
    <string name="input_name">Input name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="selected">Selected </string>
    <string name="image"> image(s)</string>
    <string name="slide_video">Slide Video</string>
    <string name="music_video">Music Video</string>
    <string name="video_maker">Video Maker</string>
    <string name="pick_image">Pick Image</string>
    <string name="rate">Please rate 5 stars for us!</string>
    <string name="notnow">Not now!</string>
    <string name="ratenow">Rate now!</string>
    <string name="nullimg">You must at least choose one image!</string>
</resources>
